<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:columnCount="10" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/focus" />

        <CheckBox
            android:id="@+id/focus_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/focus_str" />

        <CheckBox
            android:id="@+id/focus_int"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/focus_int" />

        <CheckBox
            android:id="@+id/focus_agi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/focus_agi" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:columnCount="4" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attack" />

        <CheckBox
            android:id="@+id/attack_melee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attack_melee" />

        <CheckBox
            android:id="@+id/attack_ranged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attack_rng" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ease" />

        <CheckBox
            android:id="@+id/ease_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <CheckBox
            android:id="@+id/ease_med"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <CheckBox
            android:id="@+id/ease_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role" />

        <CheckBox
            android:id="@+id/role_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support" />

        <CheckBox
            android:id="@+id/role_carry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carry" />

        <CheckBox
            android:id="@+id/role_ganker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ganker" />
    </LinearLayout>

    <EditText
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:singleLine="true"
        android:textSize="28sp" />

</LinearLayout>